mapper correction and vps config